# NoteTaker

./: .gitignore  .pre-commit-config.yaml  docker-compose.yaml  pyproject.toml
src/: .env
src/core/: serializers.py  urls.py  views.py
src/goals/: admin.py  models.py  permissions.py  serializer.py  urls.py  views.py
src/goals/migrations/: 0001_initial.py  0002_rename_id_deleted_goalcategory_is_deleted.py  0003_goal.py  0004_goalcomment.py
src/note/: manage.py  settings.py  urls.py
src/note/Note/: asgi.py  settings.py  urls.py  wsgi.py
src/note/core/: admin.py
src/note/core/migrations/: 0001_initial.py
src/note/note/: settings.py
venv_note/: pyvenv.cfg
venv_note/Scripts/: activate  activate.bat
