[tool.poetry]
name = "note"
version = "0.1.0"
description = "A simple note-taking application."
authors = ["Baiel <jyrgalbekuulubaiel@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
